--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
-    <style>
-      h1 {
-        text-align: center;
-        color: blueviolet;
-      }
-    </style>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <h1>Hello Git</h1>
+    <script src="src/app.js"></script>
   </body>
 </html>
