--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <h1>Hello Git</h1>
+    <form>
+      <input type="email" name="" id="" placeholder="Enter your email" />
+      <input type="password" name="" id="" placeholder="Enter your password" />
+      <input type="submit" value="Login" />
+    </form>
     <script src="src/app.js"></script>
   </body>
 </html>
