--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Hello Git</h1>
+    <h2>Hello Netlify</h2>
     <form>
       <input type="email" name="" id="" placeholder="Enter your email" />
       <input type="password" name="" id="" placeholder="Enter your password" />
